Refactor storage management and enhance logging
Implemented eager storing in EclipseProjectAdapter for better persistence handling. Improved test logging and reorganized storage management setup for clarity and reliability. Removed unused test configuration file and finalized application properties.